--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="width:500px">
     <div class="input-group mb-3">
       <span class="input-group-text" id="inputGroup-sizing-default">Bookmark</span>
       <input id="searchBookmarks" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
